# llm_langchain

./: .gitignore  1_fundamentals_request.py  1_fundamentals_request_claude.py  1_fundamentals_request_claude_with_env_file.py  1_fundamentals_request_google.py  1_fundamentals_request_groq.py  1_fundamentals_request_ollama.py  1_fundamentals_request_openai.py  2_fundamentals_prompt_template.py  3_fundamentals_output_parser.py  3_fundamentals_output_parser_json.py  3_fundamentals_output_parser_list.py  3_fundamentals_output_parser_pydantic.py  3_fundamentals_output_parser_string.py  4_structured_output.py  5_tools_simple.py  5_tools_with_system_prompt.json  5_tools_with_system_prompt.py  6_conversation_no_memory.py  6_conversation_with_helper_class.py  6_conversation_with_helper_function.py  6_conversation_with_helper_function_and_chain.py  6_conversation_with_helper_function_and_chain_sliding_window.py  7_chain_parallel.py  8_chatbot_ollama.py  8_chatbot_ollama_with_helper_class.py  pyproject.toml  tools.py  x_chatbot_ollama_with_streamlit.py  x_chatbot_ollama_with_streamlit_simple.py
